# Bookmark

./: .dev.env  .env.dev  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: blank.yml  checks.yml
app/: Dockerfile  db.sqlite3  entrypoint.sh
app/accounts/: urls.py  views.py
app/accounts/tests/: test_url.py  test_view.py
app/bookmarks_app/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
app/bookmarks_app/migrations/: 0001_initial.py  0002_alter_bookmark_bookmark_url_and_more.py  0003_alter_bookmark_options.py  0004_bookmark_statys.py  0005_alter_bookmark_statys.py
app/bookmarks_app/tests/: test_form.py  test_model.py  test_signal.py  test_url.py  test_view.py
app/config/: settings.py  urls.py
app/services/: base_task.py  parsers.py  scrapers.py  tasks.py
app/services/tests/: test_scrapers.py
app/servises/: parsers.py  tasks.py
app/templates/: base.html
app/templates/accounts/: login.html  register.html
app/templates/bookmarks_app/: bookmark_form.html  bookmark_list.html
