[tool.poetry]
name = "linklens"
version = "0.1.0"
description = ""
authors = ["KuksovSV <ser.kuksov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
python-dotenv = "^1.0.0"
django-bootstrap4 = "^23.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.1"
black = "^23.10.0"
mypy = "^1.6.1"
pre-commit = "^3.5.0"
django-stubs = "^4.2.5"
django-stubs-ext = "^4.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "app"
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"
