[tool.poetry]
name = "linklens"
version = "0.1.0"
description = ""
authors = ["KuksovSV <ser.kuksov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
python-dotenv = "^1.0.0"
django-bootstrap4 = "^23.2"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
celery = "^5.3.4"
redis = "^5.0.1"
flower = "^2.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.1"
black = "^23.10.0"
mypy = "^1.6.1"
pre-commit = "^3.5.0"
django-stubs = "^4.2.5"
django-stubs-ext = "^4.2.5"
types-requests = "^2.31.0.10"
types-beautifulsoup4 = "^4.12.0.7"
celery-types = "^0.20.0"


[tool.poetry.group.test.dependencies]
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "app"
explicit_package_bases = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.coverage.paths]
source = [
    "app/",
    ]

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/manage.py",
    "*/settings.py"
    ]
